# k8-mutating-webhook

./: .gitignore  Cargo.toml  README.md
webhook-server/: Cargo.toml  log4rs.yml  templates.yaml
webhook-server-lib/: Cargo.toml
webhook-server-lib/src/: config.rs  lib.rs  resource.rs  templates.rs
webhook-server-lib/tests/: integration_test.rs  test-templates.yaml  test_server.rs
webhook-server/src/: main.rs  resource.rs  templates.rs
