[package]
name = "webhook_server_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = [ "derive" ] }
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = [ "full" ] }
log = "0.4.17"
log4rs = { version = "1.2.0", features = [ "console_appender", "file_appender", "rolling_file_appender" ]}
once_cell = "1.17.1"
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0.152", features = [ "derive" ] }#
serde_with = "2.2.0"
serde_json = "1.0.93"
serde_yaml = "0.9.19"
tokio = { version = "1", features = [ "full" ] }
