[package]
name = "webhook-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = [ "full" ] }
tokio = { version = "1", features = [ "full" ] }
http-body-util = "0.1.0-rc.2"
once_cell = "1.17.1"
log = "0.4.17"

serde = { version = "1.0.152", features = [ "derive" ] }#
serde_with = "2.2.0"
serde_json = "1.0.93"
serde_yaml = "0.9.19"
